Formulário - Prof Naisa
Formulário com o intuito de auxiliar em um sistema de cadastro de livros para bibliotecas.

--- a/Desafio Formulário - Prof Naisa/cadastro_livros.html
+++ b/Desafio Formulário - Prof Naisa/cadastro_livros.html
@@ -21,7 +21,8 @@
         <section>
             <form action="" method="post">
                 <fieldset>
-                    <legend>Cadastro de Livros📚</legend>
+                    <legend>📖</legend>
+                    <div id="Titulo"><h1>Cadastro de Livros📚</h1></div>
                         <label>📖Digite o nome do livro: </label>
                         <br>
                             <input type="text" placeholder="📖Digite o nome do livro" required>
@@ -60,7 +61,7 @@
     </div>
     <br>
     <div id="Rodapé">
-        <footer>©Todos direitos reservados à Francisca Neilyta Carneiro Albuquerque</footer>
+        <footer>©Todos direitos reservados à Francisca Neilyta Carneiro Albuquerque🏫</footer>
     </div>
 </body>
 </html>
